--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 Discover <span class="best">The Best</span> Furniture For <b>Your Interior</b>
             </h1>
 
-            <p>
+            <p style="padding-top:5vh;">
                 We design pieces of furniture and objects that perfectly gap between Beauty and functionality.
             </p>
 
             <div class="btn1_btn2"> 
                 <div class="btn1Container">
                     <button>
-                      <p>Shop Now</p><img src="/images/akar-icons_circle-chevron-right-fillshopnow-icon.svg" alt="">
+                      <p style="color: white;">Shop Now</p><img src="/images/akar-icons_circle-chevron-right-fillshopnow-icon.svg" alt="">
                     </button>
                 </div>
                 <div class="btn2Container">
@@ -83,6 +83,42 @@
         <div class="introImgContainer">
             <img src="/images/Group 12intro-pic.svg" alt="">
         </div>
+    </section>
+
+    <section class="section2">
+      <h1>
+        A Huge Collection of Furniture Products for your Interior
+      </h1>
+      <p>
+        If you have the experience of ten years in an industry, no apostrohe is needed. If you have ten years’ experience, an apostrophe is needed.
+      </p>
+
+      <div class="collection">
+        <div class="allFurnitures">
+          <p>All Funitures</p>
+        </div>
+        <div class="allFurnitures">
+          <p>Living Room</p>
+        </div>
+        <div class="allFurnitures">
+          <p>Office</p>
+        </div>
+        <div class="allFurnitures">
+          <p>Bedroom</p>
+        </div>
+        <div class="allFurnitures">
+          <p>Sofas</p>
+        </div>
+        <div class="allFurnitures">
+          <p>Outdoor</p>
+        </div>
+        <div class="allFurnitures">
+          <p>Kitchen</p>
+        </div>
+        <div class="allFurnitures">
+          <p>More</p>
+        </div>
+      </div>
     </section>
     
     <script src="/script.js" async defer></script>
