--- a/index.html
+++ b/index.html
@@ -57,70 +57,103 @@
     </header>
 
     <section class="section1">
-        <div class="textIntro">
-            <h1>
-                Discover <span class="best">The Best</span> Furniture For <b>Your Interior</b>
-            </h1>
+      <div class="textIntro">
+        <h1>
+          Discover <span class="best">The Best</span> Furniture For
+          <b>Your Interior</b>
+        </h1>
 
-            <p style="padding-top:5vh;">
-                We design pieces of furniture and objects that perfectly gap between Beauty and functionality.
-            </p>
+        <p style="padding-top: 5vh">
+          We design pieces of furniture and objects that perfectly gap between
+          Beauty and functionality.
+        </p>
 
-            <div class="btn1_btn2"> 
-                <div class="btn1Container">
-                    <button>
-                      <p style="color: white;">Shop Now</p><img src="/images/akar-icons_circle-chevron-right-fillshopnow-icon.svg" alt="">
-                    </button>
-                </div>
-                <div class="btn2Container">
-                    <button>
-                      <img src="/images/Playplaybtn.svg" alt=""><p>Watch Video</p>
-                    </button>
-                </div>
-            </div>
+        <div class="btn1_btn2">
+          <div class="btn1Container">
+            <button>
+              <p style="color: white">Shop Now</p>
+              <img
+                src="/images/akar-icons_circle-chevron-right-fillshopnow-icon.svg"
+                alt=""
+              />
+            </button>
+          </div>
+          <div class="btn2Container">
+            <button>
+              <img src="/images/Playplaybtn.svg" alt="" />
+              <p>Watch Video</p>
+            </button>
+          </div>
         </div>
+      </div>
 
-        <div class="introImgContainer">
-            <img src="/images/Group 12intro-pic.svg" alt="">
-        </div>
+      <div class="introImgContainer">
+        <img src="/images/Group 12intro-pic.svg" alt="" />
+      </div>
     </section>
 
     <section class="section2">
-      <h1>
-        A Huge Collection of Furniture Products for your Interior
-      </h1>
+      <h1>A Huge Collection of Furniture Products for your Interior</h1>
       <p>
-        If you have the experience of ten years in an industry, no apostrohe is needed. If you have ten years’ experience, an apostrophe is needed.
+        If you have the experience of ten years in an industry, no apostrohe is
+        needed. If you have ten years’ experience, an apostrophe is needed.
       </p>
 
-      <div class="collection">
-        <div class="allFurnitures">
-          <p>All Funitures</p>
-        </div>
-        <div class="allFurnitures">
-          <p>Living Room</p>
-        </div>
-        <div class="allFurnitures">
-          <p>Office</p>
-        </div>
-        <div class="allFurnitures">
-          <p>Bedroom</p>
-        </div>
-        <div class="allFurnitures">
-          <p>Sofas</p>
-        </div>
-        <div class="allFurnitures">
-          <p>Outdoor</p>
-        </div>
-        <div class="allFurnitures">
-          <p>Kitchen</p>
-        </div>
-        <div class="allFurnitures">
-          <p>More</p>
+      <div class="dropdownContainer">
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">All Furnitures</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="#">Living Room</a>
+            <a href="#">Office</a>
+            <a href="#Bedroom">Bedroom</a>
+            <a href="#Sofas">Sofas</a>
+            <a href="#Outdoor">Outdoor</a>
+            <a href="#Kitchen">Kitchen</a>
+            <a href="#More">More</a>
+          </div>
         </div>
       </div>
+
+      <div class="collection">
+        <div class="furnitures">
+          <p class="furniture">All Furnitures</p>
+        </div>
+        <div class="furnitures">
+          <p class="furniture">Office</p>
+        </div>
+        <div class="furnitures">
+          <p class="furniture">Bedroom</p>
+        </div>
+        <div class="furnitures">
+          <p class="furniture">Sofas</p>
+        </div>
+        <div class="furnitures">
+          <p class="furniture">Outdoor</p>
+        </div>
+        <div class="furnitures">
+          <p class="furniture">Kitchen</p>
+        </div>
+        <div class="furnitures">
+          <p class="furniture">More</p>
+        </div>
+      </div>
+
+      <div class="funitureItems" id="items">
+        
+        <!-- <div class="chair">
+          <div class="chairImg">
+            <img src="./images/Frame 19chair.svg" alt="" />
+          </div>
+          <p class="homeWooden">Home Wooden Leg Chair</p>
+          <div class="grey_green">
+            <p class="grey">$250.00</p>
+            <p class="green">$210.00</p>
+          </div>
+        </div> -->
+      </div>
     </section>
-    
-    <script src="/script.js" async defer></script>
+
+    <script src="./script.js" async defer></script>
+    <script src="./fetch.js" async defer></script>
   </body>
 </html>
