service and benefit section

--- a/index.html
+++ b/index.html
@@ -138,18 +138,52 @@
         </div>
       </div>
 
-      <div class="funitureItems" id="items">
-        
-        <!-- <div class="chair">
-          <div class="chairImg">
-            <img src="./images/Frame 19chair.svg" alt="" />
+      <div class="funitureItems" id="items"></div>
+      <div class="seeeMoreBtnContainer">
+        <button>See More</button>
+      </div>
+    </section>
+
+    <section class="section3">
+      <h1>Our Services & Benefits</h1>
+
+      <div class="services_image">
+        <div class="services">
+          <div class="serviceIllustration">
+            <div class="serviceIllustrationImg">
+              <img src="./images/carbon_delivery.svg" alt="">
+            </div>
+            <h2>Fast & Free Shipping</h2>
+            <p>Sign up to premier delivery in Nigeria for unlimited free shipping from USA.</p>
           </div>
-          <p class="homeWooden">Home Wooden Leg Chair</p>
-          <div class="grey_green">
-            <p class="grey">$250.00</p>
-            <p class="green">$210.00</p>
+
+          <div class="serviceIllustration">
+            <div class="serviceIllustrationImg">
+              <img src="./images/ri_24-hours-line.svg" alt="">
+            </div>
+            <h2>24/7 Support</h2>
+            <p>24/7 support is a kind of support that is available throughout.</p>
           </div>
-        </div> -->
+
+          <div class="serviceIllustration">
+            <div class="serviceIllustrationImg">
+              <img src="./images/Groupreturns.svg" alt="">
+            </div>
+            <h2>Hassle Free Returns</h2>
+            <p>Free return within 15 days for official store items and 7 days for other eligible items.</p>
+          </div>
+          <div class="serviceIllustration">
+            <div class="serviceIllustrationImg">
+              <img src="./images/entypo_price-ribbon.svg" alt="">
+            </div>
+            <h2>Your Best Price Matching</h2>
+            <p>Ask to speak to a manger, show him the competitor’s lower price.</p>
+          </div>
+        </div>
+
+        <div class="image">
+          
+        </div>
       </div>
     </section>
 
