--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="#">Living Room</a>
             <a href="#">Office</a>
-            <a href="#Bedroom">Bedroom</a>
-            <a href="#Sofas">Sofas</a>
-            <a href="#Outdoor">Outdoor</a>
-            <a href="#Kitchen">Kitchen</a>
-            <a href="#More">More</a>
+            <a href="#">Bedroom</a>
+            <a href="#">Sofas</a>
+            <a href="#">Outdoor</a>
+            <a href="#">Kitchen</a>
+            <a href="#">More</a>
           </div>
         </div>
       </div>
