--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </span>
           </p>
           <div class="readMoreBtnContainer">
-            <button onclick="myFunction()" id="myBtn">Read more</button>
+            <button onclick="myBtn()" id="myBtn">Read more</button>
           </div>
 
           <div class="ratingsContainer">
