--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="customerReviewText">
           <h2>Our Customer Say</h2>
 
-          <p>
+          <p class="reviewText">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
             imperdiet, nulla et dictum interdum, nisi lorem egestas vitae
             scel<span id="dots">...</span>
