media query footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <nav>
-        <div>
+        <div class="headerLogoContainer">
           <img src="/images/Logo.svg" alt="" />
         </div>
         <ul class="menuLinks" id="menuLinks">
