created js folder

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <ul class="menuLinks" id="menuLinks">
           <div class="inputContainer">
-            <input type="text" name="search" placeholder="Search...">
+            <input type="text" name="search" placeholder="Search..." />
           </div>
           <li><a href="#">Living Room</a></li>
           <li><a href="#">Office</a></li>
@@ -54,6 +54,9 @@
         </div>
 
         <div class="bars" id="hamburger">
+          <div class="cartContainer">
+            <img src="/images/Group 10cart.svg" alt="" />
+          </div>
           <i class="fa-solid fa-bars" onclick="changeicon(this)"></i>
         </div>
       </nav>
@@ -338,7 +341,7 @@
         </div>
       </div>
     </section>
-    
+
     <footer>
       <div class="footerFlex">
         <div class="footerPenito">
@@ -349,19 +352,19 @@
 
           <div class="smLogo">
             <div>
-              <img src="./images/Vectorinstafooterlogo.svg" alt="">
+              <img src="./images/Vectorinstafooterlogo.svg" alt="" />
             </div>
             <div>
-              <img src="./images/Vectorfbfooterlogo.svg" alt="">
+              <img src="./images/Vectorfbfooterlogo.svg" alt="" />
             </div>
             <div>
-              <img src="./images/Vectorlinkedinfooterlogo.svg" alt="">
+              <img src="./images/Vectorlinkedinfooterlogo.svg" alt="" />
             </div>
             <div>
-              <img src="./images/Vectorbehancefooterlogo.svg" alt="">
+              <img src="./images/Vectorbehancefooterlogo.svg" alt="" />
             </div>
             <div>
-              <img src="./images/Vectordribblefooterlogo.svg" alt="">
+              <img src="./images/Vectordribblefooterlogo.svg" alt="" />
             </div>
           </div>
         </div>
@@ -410,9 +413,9 @@
       </div>
     </footer>
 
-    <script src="./script.js" async defer></script>
-    <script src="./fetch.js" async defer></script>
-    <script src="./readMore.js" async defer></script>
-    <script src="./footer.js" async defer></script>
+    <script src="./js/script.js" async defer></script>
+    <script src="./js/fetch.js" async defer></script>
+    <script src="./js/readMore.js" async defer></script>
+    <script src="./js/footer.js" async defer></script>
   </body>
 </html>
