--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </span>
           </p>
           <div class="readMoreBtnContainer">
-            <button onclick="myBtn()" id="myBtn">Read more</button>
+            <button onclick="myBtn()" id="myBtn">Read</button>
           </div>
 
           <div class="ratingsContainer">
