--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
             <i class="fa-solid fa-angle-down"></i>
           </div>
           <div class="answer">
-            <p>Pagination</p>
-            <p>Term & Conditions</p>
-            <p>Contact</p>
-            <p>Homepage</p>
-            <p>Terms of use</p>
+            <p><a href="#">Pagination</a></p>
+            <p><a href="#">Term & Conditions</a></p>
+            <p><a href="#">Contact</a></p>
+            <p><a href="#">Homepage</a></p>
+            <p><a href="#">Terms of use</a></p>
           </div>
         </div>
 
@@ -389,11 +389,11 @@
             <i class="fa-solid fa-angle-down"></i>
           </div>
           <div class="answer">
-            <p>Help Centre</p>
-            <p>Address Store</p>
-            <p>Privacy Policy</p>
-            <p>Receivers and Amplifiers</p>
-            <p>Clothings</p>
+            <p><a href="#">Help Centre</a></p>
+            <p><a href="#">Address Store</a></p>
+            <p><a href="#">Privacy Policy</a></p>
+            <p><a href="#">Receivers and Amplifiers</a></p>
+            <p><a href="#">Clothings</a></p>
           </div>
         </div>
 
@@ -403,11 +403,11 @@
             <i class="fa-solid fa-angle-down"></i>
           </div>
           <div class="answer">
-            <p>Delivery</p>
-            <p>Legal Notice</p>
-            <p>Documentation</p>
-            <p>Secure Payment</p>
-            <p>Stores</p>
+            <p><a href="#">Delivery</a></p>
+            <p><a href="#">Legal Notice</a></p>
+            <p><a href="#">Documentation</a></p>
+            <p><a href="#">Secure Payment</a></p>
+            <p><a href="#">Stores</a></p>
           </div>
         </div>
       </div>
