--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/Safeimagekit-resized-imgpng.png"
+    />
     <link rel="stylesheet" href="/style.css" />
     <title>Penito Landing Page</title>
   </head>
